--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "web",
+  "name": "@try-graphql/web",
+  "type": "module",
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/bun": "latest"
@@ -7,5 +8,5 @@
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "type": "module"
+  "workspaces": ["packages/*"]
 }
