--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,5 @@
 use flake
+
+export USE_HTTPS="true"
+export TLS_CERT_PATH="../../tls/localhost+2.pem"
+export TLS_KEY_PATH="../../tls/localhost+2-key.pem"
