init graphql with pylon

--- a/web/packages/backend/package.json
+++ b/web/packages/backend/package.json
@@ -1,18 +1,22 @@
 {
   "name": "@try-graphql/backend",
   "scripts": {
-    "dev": "bun run --hot src/app.ts",
+    "dev": "pylon dev -c 'bun run .pylon/index.js'",
+    "build": "pylon build",
     "check": "biome check",
     "check:write": "biome check --write"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@types/bun": "latest"
+    "@getcronit/pylon-dev": "^1.0.3",
+    "@types/bun": "latest",
+    "ohash": "^1.1.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^4.7.0"
+    "@getcronit/pylon": "^2.9.4",
+    "zod": "^3.24.1"
   }
 }
