--- a/web/packages/backend/tsconfig.json
+++ b/web/packages/backend/tsconfig.json
@@ -1,32 +1,10 @@
 {
+  "extends": "@getcronit/pylon/tsconfig.pylon.json",
   "compilerOptions": {
-    // Enable latest features
-    "lib": ["ESNext", "DOM"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
-
-    // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
-    "noEmit": true,
-
-    // Best practices
-    "strict": true,
-    "skipLibCheck": true,
-    "noFallthroughCasesInSwitch": true,
-
-    // Some stricter flags (disabled by default)
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false,
-
-    // Customize
+    "types": ["bun-types"],
     "paths": {
       "@backend/*": ["./src/*"]
     }
-  }
+  },
+  "include": ["pylon.d.ts", "src/**/*.ts"]
 }
