--- a/web/packages/backend/package.json
+++ b/web/packages/backend/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@envelop/core": "^5.0.3",
     "@getcronit/pylon": "^2.9.4",
     "hono": "^4.7.0",
     "zod": "^3.24.1"
