--- a/web/packages/backend/package.json
+++ b/web/packages/backend/package.json
@@ -10,7 +10,8 @@
     "@biomejs/biome": "^1.9.4",
     "@getcronit/pylon-dev": "^1.0.3",
     "@types/bun": "latest",
-    "ohash": "^1.1.4"
+    "ohash": "^1.1.4",
+    "prisma": "^6.3.1"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
