define docker compose

--- a/.envrc
+++ b/.envrc
@@ -3,3 +3,4 @@ use flake
 export USE_HTTPS="true"
 export TLS_CERT_PATH="../../tls/localhost+2.pem"
 export TLS_KEY_PATH="../../tls/localhost+2-key.pem"
+export PGDATA="postgres"
