--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     restart: always
     ports: 
       - "5432:5432"
+    volumes:
+      - ./postgres/init:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
