add prisma client

--- a/web/packages/backend/package.json
+++ b/web/packages/backend/package.json
@@ -3,6 +3,9 @@
   "scripts": {
     "dev": "pylon dev -c 'bun run .pylon/index.js'",
     "build": "pylon build",
+    "generate": "prisma generate",
+    "migrate": "prisma migrate dev --name $1",
+    "studio": "prisma studio",
     "check": "biome check",
     "check:write": "biome check --write"
   },
@@ -19,6 +22,7 @@
   "dependencies": {
     "@envelop/core": "^5.0.3",
     "@getcronit/pylon": "^2.9.4",
+    "@prisma/client": "^6.3.1",
     "hono": "^4.7.0",
     "zod": "^3.24.1"
   }
