--- a/web/packages/backend/tsconfig.json
+++ b/web/packages/backend/tsconfig.json
@@ -6,5 +6,5 @@
       "@backend/*": ["./src/*"]
     }
   },
-  "include": ["pylon.d.ts", "src/**/*.ts"]
+  "include": ["pylon.d.ts", "src/**/*.ts", "tests/**/*.ts"]
 }
