--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Prepare Test
         run: |
           docker compose -f ../../../docker/docker-compose.yaml up -d
-          bun test:init-db
+          bun test:init
 
       - name: Test
         run: bun test
