--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -29,18 +29,21 @@ jobs:
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
-
       - name: Install dependencies
         run: bun install --frozen-lockfile
-
       - name: Lint
         run: bun check
-
-      - name: Build
-        run: bun run build
-
-      - name: Prepare Test
-        run: bun test:init
-
       - name: Test
-        run: bun test
+        run: bun run test
+
+      - name: Setup LCOV
+        uses: hrishikesh-kadam/setup-lcov@v1
+      - name: Report code coverage
+        uses: zgosalvez/github-actions-report-lcov@v3
+        with:
+          coverage-files: "**/coverage/lcov.info"
+          minimum-coverage: 90
+          artifact-name: code-coverage-report
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: "./web/packages/backend"
+          update-comment: true
