--- a/web/packages/backend/package.json
+++ b/web/packages/backend/package.json
@@ -3,9 +3,9 @@
   "scripts": {
     "dev": "pylon dev -c 'bun run .pylon/index.js'",
     "build": "pylon build",
-    "test": "bun run build && bun test:init && bun test",
-    "test:init": "dotenv -e .env.test -- bunx prisma migrate reset --force",
+    "test": "dotenv -e .env.test -- bun migrate:reset && bun run build && bun test",
     "migrate": "prisma migrate dev",
+    "migrate:reset": "prisma migrate reset --force",
     "studio": "prisma studio",
     "check": "biome check",
     "check:write": "biome check --write"
