--- a/web/packages/frontend/package.json
+++ b/web/packages/frontend/package.json
@@ -14,7 +14,8 @@
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.1.5"
+    "react-router": "^7.1.5",
+    "sonner": "^1.7.4"
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
