--- a/web/packages/frontend/package.json
+++ b/web/packages/frontend/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
     "@tailwindcss/vite": "^4.0.6",
+    "@try-graphql/backend": "workspace:*",
     "@types/node": "^20",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
