--- a/web/packages/frontend/tsconfig.json
+++ b/web/packages/frontend/tsconfig.json
@@ -15,7 +15,8 @@
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "@backend/*": ["../../node_modules/@try-graphql/backend/src/*"]
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
