--- a/web/packages/frontend/package.json
+++ b/web/packages/frontend/package.json
@@ -9,6 +9,7 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
     "@tanstack/react-query": "^5.66.0",
