--- a/.envrc.sample
+++ b/.envrc.sample
@@ -1,8 +1,11 @@
 use flake
 
+# Common application settings
+export SLACK_CLIENT_ID=""
 export USE_HTTPS="true"
 export TLS_CERT_PATH="../../tls/localhost+2.pem"
 export TLS_KEY_PATH="../../tls/localhost+2-key.pem"
+
+# Backend application settings
 export DOMAIN="localhost"
-export SLACK_CLIENT_ID=""
 export SLACK_CLIENT_SECRET=""
